<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detailView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/background_color"
    tools:context=".fragments.MessageFragment">

    <ImageView
        android:id="@+id/message_iv"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/icon_description"
        android:foreground="@drawable/image_transparency_overlay"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img" />

    <TextView
        android:id="@+id/message_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="-16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/title"
        android:textColor="?attr/text_color"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/message_iv"
        tools:text="Title" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/message_author_image"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="@+id/message_title"
        app:layout_constraintTop_toBottomOf="@+id/message_title"
        app:shapeAppearanceOverlay="@style/roundedImageView"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/poll_of"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/of"
        app:layout_constraintBottom_toBottomOf="@+id/message_author_image"
        app:layout_constraintStart_toEndOf="@+id/message_author_image"
        app:layout_constraintTop_toTopOf="@+id/message_author_image" />

    <TextView
        android:id="@+id/message_author_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/name"
        app:layout_constraintBottom_toBottomOf="@+id/poll_of"
        app:layout_constraintStart_toEndOf="@+id/poll_of"
        app:layout_constraintTop_toTopOf="@+id/poll_of" />

    <TextView
        android:id="@+id/message_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/date"
        app:layout_constraintBottom_toBottomOf="@+id/message_author_name"
        app:layout_constraintStart_toEndOf="@+id/message_author_name"
        app:layout_constraintTop_toTopOf="@+id/message_author_name" />

    <ImageView
        android:id="@+id/message_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/icon_description"
        app:layout_constraintBottom_toBottomOf="@+id/message_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/message_date"
        app:srcCompat="@drawable/ic_baseline_share_24_invert" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/message_author_image">

        <TextView
            android:id="@+id/message_tv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/montserrat"
            android:text="@string/title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/message_author_image" />
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>